2008-03-13  Mark Mentovai  <mark@moxienet.com>

        Reviewed by eseidel.  Landed by eseidel.

        * platform/Arena.h: Use statement1;statement2 instead of
        (statement1,statement2) in CLEAR_UNUSED.

2008-03-13  Tommi Komulainen  <tommi.komulainen@iki.fi>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17821
        [SOUP] POST requests are empty

        Send the HTTP request body as well.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::ResourceHandle::start):

2008-03-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17819
          Border-collapse: collapse later cell wins on PC, earlier cell on Mac

        Test: fast/table/border-collapsing/equal-precedence-resolution.html

        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::collapsedLeftBorder): When calling
        compareBorders() with borders that may have the same precedence, made
        sure to pass the border belonging to the earlier (in document order)
        element first, since compareBorders() prefers the first argument when
        there is a tie.
        (WebCore::RenderTableCell::collapsedRightBorder): Ditto.
        (WebCore::RenderTableCell::collapsedTopBorder): Ditto.

2008-03-13  Adam Roben  <aroben@apple.com>

        wx build fix and Windows leak fix after r31034

        * platform/graphics/wx/ImageWx.cpp:
        (WebCore::Image::loadPlatformResource): Use SharedBuffer::create.
        * platform/win/SharedBufferWin.cpp:
        (WebCore::SharedBuffer::createWithContentsOfFile): Ditto (we were
        leaking the SharedBuffer here before).

2008-03-13  Antti Koivisto  <antti@apple.com>

        Reviewed by Eric.

        Correct a few issues spotted by Mike Belshe. 

        * html/PreloadScanner.cpp:
        (WebCore::PreloadScanner::tokenize):
        * loader/loader.cpp:
        (WebCore::Loader::cancelRequests):
