@@ -2,6 +2,15 @@
 
         Reviewed by eseidel.  Landed by eseidel.
 
+        * WebCore.xcodeproj/project.pbxproj:
+        * css/CSSParser.cpp:
+        * css/makeprop.pl:
+        Move CSSPropertyNames.c to CSSPropertyNames.cpp
+
+2008-03-13  Mark Mentovai  <mark@moxienet.com>
+
+        Reviewed by eseidel.  Landed by eseidel.
+
         * platform/Arena.h: Use statement1;statement2 instead of
         (statement1,statement2) in CLEAR_UNUSED.
 
